--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,283 @@
-.App {
+.App 
+{
+  text-align: center;
+  overflow: hidden;
+  background-color: black;
+  color: white;
+  height: 100%;
+}
+
+#Profile
+{
+  height: 100vh;
+  background-image: url("./Assets/BG_Mobile.jpeg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  text-align: left;
+}
+
+#ProfileText
+{
+  padding-top: 40%;
+  padding-left: 30px;
+  width: fit-content;  
+}
+
+#Intro
+{
+  margin-bottom: 20px;
+}
+
+.ContactButton
+{
+  color: white;
+  text-decoration: underline;
+  border-radius: 20px;
+  padding: 5px;
+}
+
+.ContactIco
+{
+  margin: 20px 20px 5px 20px;
+  width: 40px;
+  height: auto;
+  vertical-align: middle;
+}
+
+.ContactIco:first-child
+{
+  margin-left: 0%;
+}
+
+.ContactIco:hover
+{
+  box-shadow: 0 0 20px rgb(255, 255, 255);
+  border-radius: 30px;
+}
+
+.Captions
+{
+  margin-top: 20px;
+  font-size: 1em;
+  color: rgb(180, 180, 180);
+  margin-right: 5%;
+}
+
+#PageScroll
+{
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+}
+
+#PageScroll:hover
+{
+  text-decoration: none;
+}
+
+#ScrollIco
+{
+  height: 50px;
+}
+
+#Projects
+{
+  background-color: rgb(7, 7, 7);
+  background-image: url("./Assets/BG_Proj.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100vh;
+}
+
+#ProjectHeading
+{
+  padding: 20px 0px 20px 0px;
+}
+
+.ProjectPane
+{
+  display: block;
+  text-align: center;
+  height: 78vh;
+  overflow:auto;
+}
+
+.PaneItem
+{
+  display: block;
+  background-color: rgba(0, 0, 0, 0.432);
+  border-radius: 10px;
+  margin: 10px;
+  box-shadow: 1px 1px 2px rgb(54, 54, 54);
+  backdrop-filter: blur(10px);
+  padding: 5px;
+}
+
+.ImgContainer
+{
+  display: block;
+  padding: 10px;
+}
+
+.GalleryWindow
+{
+  border: 1px solid black;
+  width: 240px;
+  height: 135px;
+  border-radius: 5px;
+  margin: auto;
+  vertical-align: middle;
+}
+
+.ProjectThumbnail
+{
+  width: 240px;
+  height: 135px;
+}
+
+.ProjectText
+{
+  display: block;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.ProjTitle
+{
+  font-size: 1.5em;
+  padding: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.tag-list
+{
+  display: block;
+  padding: 10px 0px 10px 5px;
+}
+
+.tags
+{
+  display: inline-block;
+  width: fit-content;
+  border-radius: 20px;
+  background-color: rgb(1, 28, 105);
+  padding: 5px;
+  margin: 5px;
+  font-size: 0.7em;
+}
+
+.Panefooter
+{
+  padding: 10px 0px 5px 0px;
+}
+
+.ProjLinks
+{
+  
+  height: 30px;
+  margin-left: 10px;
+  margin-right: 10px;
+  vertical-align: middle;
+}
+
+.Heading1
+{
+  font-size: 2em;
+  font-weight: bolder;
+}
+
+.Heading2
+{
+  font-size: 1.5em;
+}
+
+
+@media only screen and (min-width: 768px)
+{
+  #Profile
+  {
+    background-image: url("./Assets/BG_Desktop_2k.jpg");
+  }
+
+  #ProfileText
+  {
+    position: relative;
+    padding-top: 0%;
+    padding-left: 0px;
+    top:20%;
+    left: 10%;
+    transform: translate(0%, 20%);
+  }
+
+  .ContactIco
+  {
+    margin: 20px 15px 0px 15px;
+  }
+
+  .Captions
+  {
+    font-size: 1.2em;
+    margin-right: 0%;
+  }
+
+  #ProjectHeading
+  {
+    padding: 30px 0px 30px 0px;
+  }
+
+  .ProjectPane
+  {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+
+  .PaneItem
+  {
+    display: block;
+    text-align:center;
+    height: 400px;
+    width: 500px;
+  }
+
+  .ImgContainer
+  {
+    display: block;
+    margin: auto;
+  }
+
+  .GalleryWindow
+  {
+    width: 360px;
+    height: 202px;
+  }
+
+  .ProjectThumbnail
+  {
+    width: 360px;
+    height: 202px;
+  }
+
+  .ProjectText
+  {
+    display: block;
+  }
+
+  .Heading1
+  {
+    font-size: 2.5em;
+    font-weight: bolder;
+  }
+  
+  .Heading2
+  {
+    font-size: 2.0em;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media only screen and (min-width: 1300px)
+{
+  #Profile
+  {
+    background-image: url("./Assets/BG_Desktop_4k.jpeg");
   }
 }
