--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App 
 {
   text-align: center;
-  overflow: hidden;
+  overflow: auto;
   background-color: black;
   color: white;
   height: 100%;
@@ -65,7 +65,7 @@
 
 #PageScroll
 {
-  position: absolute;
+  position: fixed;
   bottom: 10px;
   right: 10px;
 }
@@ -98,18 +98,17 @@
 {
   display: block;
   text-align: center;
-  height: 78vh;
+  height: 75vh;
   overflow:auto;
 }
 
 .PaneItem
 {
   display: block;
-  background-color: rgba(0, 0, 0, 0.432);
+  background-color: rgba(0, 0, 0, 0.589);
   border-radius: 10px;
   margin: 10px;
   box-shadow: 1px 1px 2px rgb(54, 54, 54);
-  backdrop-filter: blur(10px);
   padding: 5px;
 }
 
@@ -190,6 +189,24 @@
 }
 
 
+::-webkit-scrollbar-track
+{
+	border-radius: 10px;
+	background-color: #000000;
+}
+
+::-webkit-scrollbar
+{
+	width: 7px;
+	background-color: #000000;
+}
+
+::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	background-color: rgb(44, 44, 44);
+}
+
 @media only screen and (min-width: 768px)
 {
   #Profile
@@ -227,6 +244,7 @@
   {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
   }
